--- a/ebay/Views/Shared/_LoginPartial.cshtml
+++ b/ebay/Views/Shared/_LoginPartial.cshtml
@@ -7,7 +7,7 @@
 @if(_currentUserProvider.IsLoggedIn())
 {
     <div class="d-flex gap-2 align-items-center justify-content-center">
-        <span>
+        <span class="text-white">
             @currentUser?.FirstName
             @currentUser?.Id
         </span>
