--- a/ebay/Areas/Public/Views/Public/Detail.cshtml
+++ b/ebay/Areas/Public/Views/Public/Detail.cshtml
@@ -35,7 +35,7 @@
                     <div class="col-12 col-lg-6 offset-lg-1">
 
                         <div class="col-12 col-md-6 pb-4">
-                            <span class="badge">@Model.Product.Category</span>
+                            @* <span class="badge">@Model.Product.Category</span> *@
                         </div>
                         <div class="row ">
                             <h1 class="text-dark" style="font-size: 24px;line-height: 32px;">@Model.Product.Name</h1>
