display multiple image

--- a/ebay/Areas/Admin/Views/Product/Index.cshtml
+++ b/ebay/Areas/Admin/Views/Product/Index.cshtml
@@ -7,7 +7,7 @@
         <div class="card-body">
             <div class="toolbar row mb-3">
                 <div class="col">
-                    <form class="form-inline" method="post">
+                    <form class="form-inline">
                         <div class="row">
                             <div class="form-group col-auto mr-auto d-flex justify-content-right">
                                 <input asp-for="Name" type="text" placeholder="e.g. Iphone" class="form-control ">
